<resources>
    <string name="app_name">Day3_task</string>
    <string name="button_number_zero">0</string>
    <string name="button_number_one">1</string>
    <string name="button_number_two">2</string>
    <string name="button_number_three">3</string>
    <string name="button_number_four">4</string>
    <string name="button_number_five">5</string>
    <string name="button_number_six">6</string>
    <string name="button_number_seven">7</string>
    <string name="button_number_eight">8</string>
    <string name="button_number_nine">9</string>

</resources>