<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_number_zero"
            android:textSize="70sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/del_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/del_btn"
                    android:layout_alignTop="@id/del_btn"
                    android:layout_alignEnd="@id/del_btn"
                    android:layout_alignBottom="@id/del_btn"
                    android:gravity="center"
                    android:text="AC"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/parentheses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape1"
                android:src="@drawable/brackets" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape1"
                android:src="@drawable/percent_icon" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape3"
                android:src="@drawable/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_seven"
                    android:layout_alignTop="@id/number_seven"
                    android:layout_alignEnd="@id/number_seven"
                    android:layout_alignBottom="@id/number_seven"
                    android:gravity="center"
                    android:text="@string/button_number_seven"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_eight"
                    android:layout_alignTop="@id/number_eight"
                    android:layout_alignEnd="@id/number_eight"
                    android:layout_alignBottom="@id/number_eight"
                    android:gravity="center"
                    android:text="@string/button_number_eight"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_nine"
                    android:layout_alignTop="@id/number_nine"
                    android:layout_alignEnd="@id/number_nine"
                    android:layout_alignBottom="@id/number_nine"
                    android:gravity="center"
                    android:text="@string/button_number_nine"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape3"
                android:src="@drawable/multi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_four"
                    android:layout_alignTop="@id/number_four"
                    android:layout_alignEnd="@id/number_four"
                    android:layout_alignBottom="@id/number_four"
                    android:gravity="center"
                    android:text="@string/button_number_four"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_five"
                    android:layout_alignTop="@id/number_five"
                    android:layout_alignEnd="@id/number_five"
                    android:layout_alignBottom="@id/number_five"
                    android:gravity="center"
                    android:text="@string/button_number_five"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_six"
                    android:layout_alignTop="@id/number_six"
                    android:layout_alignEnd="@id/number_six"
                    android:layout_alignBottom="@id/number_six"
                    android:gravity="center"
                    android:text="@string/button_number_six"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape3"
                android:src="@drawable/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_one"
                    android:layout_alignTop="@id/number_one"
                    android:layout_alignEnd="@id/number_one"
                    android:layout_alignBottom="@id/number_one"
                    android:gravity="center"
                    android:text="@string/button_number_one"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_two"
                    android:layout_alignTop="@id/number_two"
                    android:layout_alignEnd="@id/number_two"
                    android:layout_alignBottom="@id/number_two"
                    android:gravity="center"
                    android:text="@string/button_number_two"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_three"
                    android:layout_alignTop="@id/number_three"
                    android:layout_alignEnd="@id/number_three"
                    android:layout_alignBottom="@id/number_three"
                    android:gravity="center"
                    android:text="@string/button_number_three"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape3"
                android:src="@drawable/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/sign"
                    android:layout_alignTop="@id/sign"
                    android:layout_alignEnd="@+id/sign"
                    android:layout_alignBottom="@id/sign"
                    android:gravity="center"
                    android:text="+/-"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/number_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/number_zero"
                    android:layout_alignTop="@id/number_zero"
                    android:layout_alignEnd="@id/number_zero"
                    android:layout_alignBottom="@id/number_zero"
                    android:gravity="center"
                    android:text="@string/button_number_one"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape2"
                android:src="@drawable/comma" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape3"
                android:src="@drawable/equal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>